# Agent-Fuzzing

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
samples/: CROMU_00001  CROMU_00002  CROMU_00003  CROMU_00004  CROMU_00005  CROMU_00011  afl.maze.big.nobt  afl.maze.small.nobt  maze
scripts/: build_cgc_bin.py  corpus_total_edges.py  run_corpus_stats.py  run_fuzzer.py  run_multiagent_fuzzer.py
src/: corpus_stat_tracker.py  fuzzer.py  mutation_agent.py  ql_emulation.py
src/ExecStateFuzzer/: corpus_stat_tracker.py  coverage_plateau_flow.py  fuzzer.py  models.py  mutation_engine.py  ql_emulation.py  utils.py
src/ExecStateFuzzer/mutation_engines/: operator_client.py  operator_server.py
src/agent_fuzzing/: corpus_stat_tracker.py  fuzzer.py  models.py  multi_agent_fuzzer.py  multiagent_fuzzer.py  mutation_agent.py  mutation_multiagent.py  operators_fuzzer.py  ql_emulation.py  single_agent_fuzzer.py
src/agent_fuzzing/mutation_engines/: multi_agent.py  operator_server.py  operators.py  single_agent.py
src/agent_fuzzing/mutation_engines/agent_defined/: mutate.py  operators.py
tests/: test_critic_run.py  test_emulation.py  test_execution_state.py  test_function_profile.py  test_mutations.py  test_seed_input.py
